src/resources/style.css
html {
	background: repeating-linear-gradient(-40deg, #ccc, #eee 20px, #eeeeef 20px, #aaaaaf 25px);
}
main {
	max-width: 1250px;
	margin: auto;
}
section {
	background-color: rgba(200, 200, 200, 0.8);
	padding: 1px 15px 15px;
	border-radius: 12px;
	margin: 1em 0.5em;
}
section.mini-section {
	display: inline-grid;
	min-width: 250px;
}
section h2 {
	margin: 0 -15px 15px;
	background-color: rgba(0, 0, 25, 0.7);
	color: #ccc;
	padding: 15px;
	border-radius: 12px 12px 0 0;
}
section h2 a {
	color: inherit;
}

section:not(.mini-section) table {
	width: 100%;
}
section > table > tbody td {
	font-family: monospace;
	font-weight: bolder;
	padding: 2px 5px;
}
section > table > thead td {
	background: rgba(0, 0, 25, 0.7);
	color: #ccc;
	padding: 6px;
	border-radius: 3px;
}
section > table > tbody > tr > td.error {
	color: #a00;
	text-align: center;
	background-color: rgba(20, 20, 20, 0.15);
	padding: 10px;
}
section > table > tr:nth-child(even) {
	background-color: rgba(20, 20, 20, 0.15);
}
section > table a {
	color: #444;
	text-wrap: nowrap;
}
a[target=_blank]:after {
	content: url("data:image/svg+xml,%3Csvg%20fill%3D%22none%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20width%3D%2224%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M10%206H6C4.89543%206%204%206.89543%204%208V18C4%2019.1046%204.89543%2020%206%2020H16C17.1046%2020%2018%2019.1046%2018%2018V14M14%204H20M20%204V10M20%204L10%2014%22%20stroke%3D%22%234A5568%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20stroke-width%3D%222%22%2F%3E%3C%2Fsvg%3E");
	display: inline-block;
	scale: 0.6;
}
.effort {
	border: solid;
	border-radius: 5px;
	text-align: center;
	text-wrap: nowrap;
	padding: 0 7px;
	font-size: 12px;
}
.effort.small {
	background-color: #ffd;
	color: #550;
}
.effort.considerable {
	background-color: #fdc;
	color: #530;
}
.effort.huge {
	background-color: #fdd;
	color: #500;
}
.effort.automatic {
	background-color: #e9ffe9;
	color: #050;
}
.effort.tolerable {
	background-color: #def;
	color: #005;
}
.effort.remote {
	background-color: #dcb;
	color: #520;
}
.effort.unknown {
	background-color: #ddd;
	color: #333;
}
.disk-space {
	display: inline-block;
	margin: 15px 0 0;
	background: rgba(0, 0, 0, 0.6);
	color: #ccc;
	padding: 10px;
	border-radius: 5px;
}
.disk-space h3 {
	display: inline;
}
.backup_list .error {
	color: #a00;
	text-align: center;
}
.backup_list .skipped {
	color: #999;
	text-align: center;
}
footer {
	text-align: right;
	position: absolute;
	left: 0;
	right: 0;
	padding: 0.5em 1em;
	font-weight: bold;
	color: #222;
	background-image: linear-gradient(#aaa 0%, #ccc 21%, #999 85%, #aaa 100%);
}
footer form {
	display: inline;
}
footer form input {
	font-size: 16px;
	border: none;
	background: transparent;
	cursor: pointer;
}

